Refactor all controller update DTO and add ApiResponse